@@ -82,6 +82,7 @@ build-stamp: configure-stamp
 	gcc lib/.libs/*.o src/*.o luks/.libs/*.o -o src/cryptsetup.static \
 		-lpopt -ldevmapper -luuid /usr/lib/libgcrypt.a /usr/lib/libgpg-error.a
 	gcc -Wall -pedantic -std=c99 debian/askpass.c -o debian/askpass
+	gcc -Wall -pedantic -std=c99 debian/mountdev.c -o debian/scripts/mountdev
 	touch $@
 
 clean: unpatch
@@ -93,6 +94,7 @@ clean: unpatch
 	rm -f debian/cryptdisks_start.8 debian/cryptdisks_start.8.xml
 	rm -f debian/cryptdisks_stop.8 debian/cryptdisks_stop.8.xml
 	rm -f debian/doc/*.[0-9] debian/doc/variables.xml
+	rm -f debian/scripts/mountdev
 	rm -f debian/askpass
 	rm -f config.mess
 	rm -rf autom4te.cache 
@@ -114,6 +116,7 @@ install-stamp: build-stamp
 	install -m 0755 debian/scripts/cryptdisks_start $(CURDIR)/debian/cryptsetup/usr/sbin/
 	install -m 0755 debian/scripts/cryptdisks_stop $(CURDIR)/debian/cryptsetup/usr/sbin/
 	install -m 0755 debian/scripts/decrypt_* $(CURDIR)/debian/cryptsetup/lib/cryptsetup/scripts/
+	install -m 0755 debian/scripts/mountdev $(CURDIR)/debian/cryptsetup/lib/cryptsetup/scripts/
 	install -m 0755 debian/initramfs/cryptroot-hook \
 		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptroot
 	install -m 0755 debian/initramfs/cryptroot-script \
